--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+html{
+    padding: 0;
+    margin: 0;
+}
+body{
+    margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.actors-header{
+    font-size: 4rem;
+    font-weight: 500;
+    text-align: center;
+    margin-top:  4rem;
+    margin-bottom: 2rem;
+}
+.actors-header span{
+    font-weight: 800;
+    background: linear-gradient(to right, #4169e1, #add8e6);
+    -webkit-background-clip: text; /* For WebKit/Blink browsers */
+    color: transparent; /* Set the text color to transparent */
+    text-fill-color: transparent;
+}
+.actors-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1200px;
+    margin:auto;
+    margin-top: 1rem;
+}
+.pagination-container{
+    display: flex;
+    gap: 2rem;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: 2rem;
+    margin-bottom: 4rem;
+    margin-top: 4rem;
+}
+.pagination-container div{
+    cursor: pointer;
+    display: flex;
+    box-shadow: 0 8px 10px rgba(12, 11, 11, 0.2);
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 1rem;
+    border-radius: .5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 800px) {
+    .actors-header{
+        font-size: 2rem;
+        margin: 0 1rem;
+    }
+    .actors-container {
+     display: block; 
+    }
+
+
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
